# bayesmech-spaces

./: .env.example  .gitignore  AGENTS.md  BACKEND_SCHEMA.md  DESIGN.md  README.md  docker-compose.yml  pyproject.toml
android/: mock-data.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/spaces/bayesmech/com/: MainActivity.kt
android/app/src/main/java/spaces/bayesmech/com/audio/: VoiceNoteRecorder.kt
android/app/src/main/java/spaces/bayesmech/com/data/: AppRepositories.kt  InMemorySharedContentRepository.kt  Models.kt  ProfileAiApi.kt  Repositories.kt  UserSessionStore.kt
android/app/src/main/java/spaces/bayesmech/com/data/backend/: BackendConfig.kt  BackendRepository.kt
android/app/src/main/java/spaces/bayesmech/com/data/mock/: MockRepositories.kt  MockSeedData.kt
android/app/src/main/java/spaces/bayesmech/com/share/: ShareIntentParser.kt
android/app/src/main/java/spaces/bayesmech/com/ui/: SpacesApp.kt
android/app/src/main/java/spaces/bayesmech/com/ui/components/: AiPatternField.kt  AvatarImage.kt  EventCard.kt  SpacesMenuButton.kt
android/app/src/main/java/spaces/bayesmech/com/ui/navigation/: AppDestination.kt
android/app/src/main/res/values/: themes.xml
app/: community.py  config.py  db.py  main.py  matching.py  models.py  profile_ai.py  routes.py  transcription.py  utils.py
app/tests/: conftest.py  test_auth_api.py  test_chat_and_connections_api.py  test_events_api.py  test_users_api.py
scripts/: backfill_profile_embeddings.py  seed_android_mock_data.py
(+11 files in other folders)
